# gdk-sharp

./: Makefile.am  README.md  configure.ac  m4.custom
m4/: gio.m4  pango.m4
sources/: Gdk-3.0-merged.gir  Makefile.am  cairo-api.xml  gdk-sharp-api.raw  gdk-sharp.metadata  gdk-sharp.snk
sources/custom/: Device.cs  Event.cs  EventButton.cs  EventMotion.cs  KeyMap.cs  Pixbuf.cs  Window.cs
sources/glue/: Makefile.am
